# qa_llm

./: .gitignore  baseline_model_inf.py  pyproject copy.toml  pyproject.toml  requirements.txt  result.json  xlm-roberta-large-qa-multilingual-finedtuned-ru.py.py
data/raw/: camping_chat.txt  chat_history.json
src/: baseline_model_inf.py  baseline_model_via_langchain.py  load_qa_chain.py  one.py  retrieval_qa.py  telegram_chat_loader.py
src/benchmarks/: TelegramChats.py
src/data/: CampingBenchmark.py  TelegramChats.py
src/embedders/: benchmark.py  instruct_embeddings.py
src/message_search/: create_embeddings.py  langchain.py
src/models/: benchmark.py  bloom.py  extractive_qa_huggingface.py  stablelm.py  xlm_roberta_ru.py
src/other/: apply_delta.py  baseline_model_via_langchain.py  new_wrapper.py  prompts.py
src/question_answering/: bloom.py  extractive_qa_huggingface.py  xlm_roberta_ru.py
src/utils/: __init__.py  chat_data.py
