[tool.poetry]
name = "qa-llm"
version = "0.1.0"
description = ""
authors = ["Kazybek Askarbek <k.askarbek@innopolis.university>"]
readme = "README.md"
packages = [{include = "qa_llm"}]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.12.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
openai = "^0.27.4"
transformers = "^4.28.1"
torch = "^2.0.0"
sentencepiece = "^0.1.98"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
