[tool.poetry]
name = "qa-llm"
version = "0.1.0"
description = ""
authors = ["Kazybek Askarbek <k.askarbek@innopolis.university>"]
readme = "README.md"
packages = [{include = "qa_llm"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.147"
ipykernel = "^6.22.0"
python-dotenv = "^1.0.0"
pypdf = "^3.8.1"
protobuf = "3.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
